@@ -1,7 +1,8 @@
--Xms1g
--Xmx4g
+-Xms2g
+-Xmx8g
+-XX:MetaspaceSize=256m
+-XX:MaxMetaspaceSize=512m
 -XX:+UseZGC
--XX:+ZGenerational
--XX:+UseCompactObjectHeaders
 -XX:+UseStringDeduplication
+-Djava.util.concurrent.ForkJoinPool.common.parallelism=24
 --enable-preview
